feat: agginta modale per la conferma della coancellazione in index

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -13,6 +13,8 @@
 // scss partial
 @import "./partials/reset";
 @import "./partials/variables";
+@import "./partials/extend";
+@import "./partials/common";
 @import "./footer";
 @import "./header";
 body {
